# ChangeLog for dev-ruby/rubygems
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.101 2008/08/06 16:40:12 graaff Exp $

  09 Sep 2008; Alex Legler <gentoo@a3li.info>
  +files/rubygems-1.2.0-setup.patch, +files/10rubygems, +files/auto_gem.rb,
  +files/conf.d-gem_server, +files/init.d-gem_server2,
  +rubygems-1.2.0.ebuild, +rubygems-1.2.0-r1.ebuild:
  Added updated patch to fix bug #230163
  Added eselect-ruby comatible ebuild (including the aforementioned fix)
  
  06 Aug 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml,
  rubygems-1.2.0.ebuild:
  Add USE flag description to metadata wrt GLEP 56.

  04 Jul 2008; Jeroen Roovers <jer@gentoo.org> rubygems-1.1.1.ebuild:
  Stable for HPPA (bug #229875).

  01 Jul 2008; Raúl Porcel <armin76@gentoo.org> rubygems-1.1.1.ebuild:
  alpha/ia64/x86 stable wrt #229875

  30 Jun 2008; Brent Baude <ranger@gentoo.org> rubygems-1.1.1.ebuild:
  stable ppc64, bug 229875

  30 Jun 2008; nixnut <nixnut@gentoo.org> rubygems-1.1.1.ebuild:
  Stable on ppc wrt bug 229875

  29 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> rubygems-1.1.1.ebuild:
  Stable on sparc, bug #229875

  29 Jun 2008; Hans de Graaff <graaff@gentoo.org> +files/init.d-gem_server2,
  rubygems-1.1.1.ebuild, rubygems-1.2.0.ebuild:
  The syntax to start the gem server has changed slightly, as reflected in the
  updated init.d file, fixing a problem reported in #229875.

  29 Jun 2008; Hans de Graaff <graaff@gentoo.org> rubygems-0.9.4-r2.ebuild,
  rubygems-1.1.1.ebuild, rubygems-1.2.0.ebuild:
  The distribution no longer contains dot files, so remove the (broken) find.
  Thanks to Henning Schild in #229897 for finding this.

  28 Jun 2008; Thomas Anderson <gentoofan23@gentoo.org>
  rubygems-1.1.1.ebuild:
  stable amd64, bug 229875

  28 Jun 2008; Hans de Graaff <graaff@gentoo.org> -rubygems-0.9.4.ebuild,
  -rubygems-0.9.4-r1.ebuild:
  Remove old versions
